--- a/src/main/java/vista/interfaces/Usuarios.fxml
+++ b/src/main/java/vista/interfaces/Usuarios.fxml
@@ -15,7 +15,7 @@
                   <Insets />
                </VBox.margin>
             </Label>
-            <GridPane alignment="CENTER" styleClass="pane-border">
+            <GridPane alignment="CENTER" styleClass="pane-border" vgap="5.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="NEVER" />
                 <ColumnConstraints minWidth="10.0" prefWidth="200.0" />
@@ -35,14 +35,14 @@
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
+                  <TextField fx:id="txtDocumento" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
                   <Label text="Apellido y nombre" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3" />
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Seleccionar persona" textOverrun="CLIP" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <TextField fx:id="txtNombre" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="3" />
+                  <Button fx:id="btnSeleccionarPersona" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#seleccionarPersona" text="Seleccionar persona" textOverrun="CLIP" GridPane.columnIndex="3" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -52,25 +52,25 @@
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField promptText="Ingrese el nombre de usuario" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="txtUsuario" promptText="Ingrese el nombre de usuario" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <Label text="Contraseña" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <PasswordField promptText="Ingrese la contraseña" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <PasswordField fx:id="txtContrasena" promptText="Ingrese la contraseña" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <Label text="Confirmar" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                      <padding>
                         <Insets left="10.0" right="10.0" />
                      </padding>
                   </Label>
-                  <PasswordField promptText="Confirme la contraseña" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+                  <PasswordField fx:id="txtConfirmar" promptText="Confirme la contraseña" GridPane.columnIndex="3" GridPane.rowIndex="3" />
                   <Label text="Descripción" GridPane.rowIndex="4">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField promptText="Ingrese una descripción para el usuario" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
+                  <TextField fx:id="txtDescripcion" promptText="Ingrese una descripción para el usuario" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="4" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -88,30 +88,30 @@
                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <VBox.margin>
-                  <Insets bottom="10.0" />
+                  <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
                <children>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar usuario" textOverrun="CLIP">
+                  <Button fx:id="btnBuscar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarUsuario" text="Buscar usuario" textOverrun="CLIP">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo usuario" textOverrun="CLIP" GridPane.columnIndex="1">
+                  <Button fx:id="btnNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoUsuario" text="Nuevo usuario" textOverrun="CLIP" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar usuario" textOverrun="CLIP" GridPane.columnIndex="4">
+                  <Button fx:id="btnEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarUsuario" text="Eliminar usuario" textOverrun="CLIP" GridPane.columnIndex="4">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
+                  <Button fx:id="btnGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarUsuario" text="Guardar cambios" textOverrun="CLIP" GridPane.columnIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="3">
+                  <Button fx:id="btnDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarUsuario" text="Descartar cambios" textOverrun="CLIP" GridPane.columnIndex="3">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
@@ -136,30 +136,30 @@
                 <RowConstraints maxHeight="1.7976931348623157E308" minHeight="-Infinity" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TableView GridPane.rowSpan="2147483647">
+                  <TableView fx:id="tblDisponibles" GridPane.rowSpan="2147483647">
                     <columns>
-                      <TableColumn prefWidth="75.0" text="Roles disponibles" />
+                      <TableColumn fx:id="colDisponibles" prefWidth="75.0" text="Roles disponibles" />
                     </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button ellipsisString="" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="button-agregar" text="Agregar &gt;&gt;" textOverrun="LEADING_WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btnAgregar" ellipsisString="" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarRol" styleClass="button-agregar" text="Agregar &gt;&gt;" textOverrun="LEADING_WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button ellipsisString="" maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="button-quitar" text="&lt;&lt; Quitar" textOverrun="WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Button fx:id="btnQuitar" ellipsisString="" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#quitarRol" styleClass="button-quitar" text="&lt;&lt; Quitar" textOverrun="WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <TableView GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
+                  <TableView fx:id="tblUsuario" GridPane.columnIndex="2" GridPane.rowSpan="2147483647">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                      <columns>
-                        <TableColumn prefWidth="75.0" text="Roles del usuario" />
+                        <TableColumn fx:id="colUsuario" prefWidth="75.0" text="Roles del usuario" />
                      </columns>
                   </TableView>
                </children>
