--- a/src/main/java/vista/interfaces/Personas.fxml
+++ b/src/main/java/vista/interfaces/Personas.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.*?>
 <?scenebuilder-stylesheet Style.css?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Personas">
+<ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="600.0" prefWidth="800.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.Personas">
    <content>
       <GridPane vgap="5.0">
          <columnConstraints>
@@ -56,17 +56,17 @@
                   <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
                </rowConstraints>
                <children>
-                  <Button fx:id="btnPersonasPersona" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Buscar persona" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Button fx:id="btnPersonasBuscar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#buscarPersona" text="Buscar persona" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnPersonasNueva" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nueva persona" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Button fx:id="btnPersonasNueva" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevaPersona" text="Nueva persona" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="btnPersonasEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar persona" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <Button fx:id="btnPersonasEliminar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarPersona" text="Eliminar persona" GridPane.columnIndex="3" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
@@ -83,7 +83,7 @@
               <tabs>
                 <Tab text="Datos">
                      <content>
-                        <GridPane>
+                        <GridPane vgap="10.0">
                            <columnConstraints>
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
                            </columnConstraints>
@@ -94,12 +94,12 @@
                            <children>
                               <GridPane>
                                  <children>
-                                    <Button fx:id="btnDatosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnDatosGuardar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarPersona" text="Guardar cambios" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnDatosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnDatosDescartar" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarPersona" text="Descartar cambios" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </GridPane.margin>
@@ -162,7 +162,7 @@
                                           <Insets />
                                        </GridPane.margin>
                                     </Label>
-                                    <DatePicker fx:id="dtpCargosNacimiento" maxWidth="105.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="4">
+                                    <DatePicker fx:id="dtpDatosFechaNacimiento" maxWidth="105.0" GridPane.columnIndex="1" GridPane.hgrow="NEVER" GridPane.rowIndex="4">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
@@ -187,7 +187,7 @@
                         </GridPane>
                      </content>
                   </Tab>
-                <Tab text="Contacto">
+                <Tab text="Contactos">
                      <content>
                         <GridPane vgap="10.0">
                            <columnConstraints>
@@ -210,27 +210,27 @@
                                   <RowConstraints minHeight="30.0" vgrow="NEVER" />
                                 </rowConstraints>
                                  <children>
-                                    <Button fx:id="btnContactoNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo contacto" />
-                                    <Button fx:id="btnContactoGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnContactosNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoContacto" text="Nuevo contacto" />
+                                    <Button fx:id="btnContactosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarContacto" text="Guardar cambios" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnContactoDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnContactosDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarContacto" text="Descartar cambios" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnContactoEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar contacto" GridPane.columnIndex="3" />
+                                    <Button fx:id="btnContactosEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarContacto" text="Eliminar contacto" GridPane.columnIndex="3" />
                                  </children>
                               </GridPane>
-                              <TableView fx:id="tblContacto" minHeight="-Infinity" prefHeight="150.0" GridPane.rowIndex="1">
+                              <TableView fx:id="tblContactos" minHeight="-Infinity" prefHeight="150.0" GridPane.rowIndex="1">
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                                  </columnResizePolicy>
                                  <columns>
-                                    <TableColumn fx:id="colContactoTipo" prefWidth="253.0" text="Tipo" />
-                                    <TableColumn fx:id="colContactoDato" prefWidth="523.0" text="Dato" />
+                                    <TableColumn fx:id="colContactosTipo" prefWidth="253.0" text="Tipo" />
+                                    <TableColumn fx:id="colContactosDato" prefWidth="523.0" text="Dato" />
                                  </columns>
                               </TableView>
                               <GridPane alignment="CENTER" hgap="10.0" vgap="5.0" GridPane.rowIndex="2">
@@ -244,9 +244,9 @@
                                 </rowConstraints>
                                  <children>
                                     <Label text="Tipo" />
-                                    <ComboBox fx:id="btnContactoTipo" prefWidth="150.0" GridPane.columnIndex="1" />
+                                    <ComboBox fx:id="cmbContactosTipo" prefWidth="150.0" GridPane.columnIndex="1" />
                                     <Label text="Dato" GridPane.rowIndex="1" />
-                                    <TextField fx:id="txtContactoDato" promptText="Ingrese el contacto" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <TextField fx:id="txtContactosDato" promptText="Ingrese el contacto" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
                            </children>
@@ -262,18 +262,18 @@
                            <children>
                               <GridPane hgap="10.0">
                                  <children>
-                                    <Button fx:id="btnDomiciliosNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Nuevo domicilio" />
-                                    <Button fx:id="btnDomiciliosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Guardar cambios" GridPane.columnIndex="1">
+                                    <Button fx:id="btnDomiciliosNuevo" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#nuevoDomicilio" text="Nuevo domicilio" />
+                                    <Button fx:id="btnDomiciliosGuardar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardarDomicilio" text="Guardar cambios" GridPane.columnIndex="1">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnDomicilioDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Descartar cambios" GridPane.columnIndex="2">
+                                    <Button fx:id="btnDomicilioDescartar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#descartarDomicilio" text="Descartar cambios" GridPane.columnIndex="2">
                                        <GridPane.margin>
                                           <Insets />
                                        </GridPane.margin>
                                     </Button>
-                                    <Button fx:id="btnDomiciliosEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Eliminar domicilio" GridPane.columnIndex="3" />
+                                    <Button fx:id="btnDomiciliosEliminar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminarDomicilio" text="Eliminar domicilio" GridPane.columnIndex="3" />
                                  </children>
                                  <columnConstraints>
                                     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -361,12 +361,12 @@
                                                                </GridPane.margin>
                                                             </Label>
                                                             <TextField fx:id="txtTitulosTitulo" minWidth="300.0" promptText="Ingrese el nombre del título que desea agregar" GridPane.columnIndex="1" />
-                                                            <Button fx:id="btnTitulosAgregar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Agregar título" GridPane.columnIndex="2">
+                                                            <Button fx:id="btnTitulosAgregar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarTitulo" text="Agregar título" GridPane.columnIndex="2">
                                                                <GridPane.margin>
                                                                   <Insets />
                                                                </GridPane.margin>
                                                             </Button>
-                                                            <Button fx:id="btnTitulosQuitar" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Quitar título" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                                                            <Button fx:id="btnTitulosQuitar" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#quitarTitulo" text="Quitar título" GridPane.columnIndex="3" GridPane.halignment="CENTER">
                                                                <GridPane.margin>
                                                                   <Insets />
                                                                </GridPane.margin>
