--- a/src/main/java/vista/interfaces/Docentes.fxml
+++ b/src/main/java/vista/interfaces/Docentes.fxml
@@ -99,7 +99,7 @@
             </GridPane>
             <TabPane prefHeight="448.0" prefWidth="798.0" tabClosingPolicy="UNAVAILABLE" GridPane.rowIndex="2">
                <tabs>
-                  <Tab closable="false" text="Datos">
+                  <Tab closable="false" onSelectionChanged="#inicializarDatos" text="Datos">
                      <content>
                         <ScrollPane fitToHeight="true" fitToWidth="true" maxHeight="-Infinity" prefHeight="5000.0">
                            <content>
