--- a/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
+++ b/src/main/java/vista/interfaces/BusquedaCargoDocente.fxml
@@ -31,7 +31,8 @@
           <TableColumn fx:id="colCargoDocenteLegajo" maxWidth="2000.0" prefWidth="75.0" text="Legajo" />
           <TableColumn fx:id="colCargoDocenteNombre" prefWidth="75.0" text="Apellido y nombre" />
             <TableColumn fx:id="colCargoDocenteArea" maxWidth="2000.0" prefWidth="75.0" text="Área" />
-            <TableColumn fx:id="colCargoDocenteCargo" prefWidth="75.0" text="Cargo" />
+            <TableColumn fx:id="colCargoDocenteCodigo" maxWidth="2000.0" prefWidth="75.0" text="Código Cargo" />
+            <TableColumn fx:id="colCargoDocenteCargo1" prefWidth="75.0" text="Cargo" />
         </columns>
          <VBox.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
