--- a/src/main/java/vista/interfaces/ListaInformes.fxml
+++ b/src/main/java/vista/interfaces/ListaInformes.fxml
@@ -14,7 +14,7 @@
 
 <BorderPane prefHeight="480.0" prefWidth="640.0" stylesheets="@Style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="vista.controladores.ListaInformes">
    <center>
-      <TableView fx:id="tblListaInformes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <TableView fx:id="tblListaInformes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onKeyPressed="#keyPressed" BorderPane.alignment="CENTER">
         <columns>
           <TableColumn fx:id="colListaInformesNombre" prefWidth="75.0" text="Nombre del informe" />
         </columns>
@@ -51,7 +51,7 @@
                   <Tooltip text="Crear un nuevo informe a partir de una plantilla" />
                </tooltip>
             </Button>
-            <Button fx:id="btnListaInformesVerEditar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#editar" text="Ver / Editar informe" GridPane.columnIndex="2">
+            <Button fx:id="btnListaInformesVerEditar" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#editar" onKeyPressed="#keyPressed" text="Ver / Editar informe" GridPane.columnIndex="2">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
