--- a/src/main/java/vista/interfaces/Roles.fxml
+++ b/src/main/java/vista/interfaces/Roles.fxml
@@ -20,8 +20,6 @@
          <children>
             <GridPane vgap="5.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="NEVER" />
-                  <ColumnConstraints hgrow="NEVER" minWidth="-Infinity" prefWidth="50.0" />
                   <ColumnConstraints hgrow="NEVER" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
@@ -30,23 +28,17 @@
                 <RowConstraints minHeight="-Infinity" prefHeight="30.0" vgrow="NEVER" />
               </rowConstraints>
                <children>
-                  <Label text="ID">
-                     <GridPane.margin>
-                        <Insets right="10.0" />
-                     </GridPane.margin>
-                  </Label>
                   <Label text="Descripción" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <Label text="Nombre" GridPane.columnIndex="2">
+                  <Label text="Nombre">
                      <GridPane.margin>
                         <Insets left="10.0" right="10.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="txtRolesId" editable="false" focusTraversable="false" mouseTransparent="true" GridPane.columnIndex="1" />
-                  <TextField fx:id="txtRolesNombre" promptText="Ingrese el nombre del rol" GridPane.columnIndex="3" />
+                  <TextField fx:id="txtRolesNombre" promptText="Ingrese el nombre del rol" GridPane.columnIndex="1" />
                   <TextField fx:id="txtRolesDescripcion" promptText="Ingrese una descripción para el rol" GridPane.columnIndex="1" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
                </children>
                <VBox.margin>
